--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
 	<ul>
 		<% for(let i = 0; i < movies.length; i++) {%>
-			<li><%=movies[i].title %></li>
+			<a href="/movies/<%= movies[i].id%>"><li><%=movies[i].title %></li></a>
 		<% } %>
 
 
