Created edit page the displays a form with the movies data

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -16,6 +16,8 @@
 		watched it.
 	</p>
 
+	<a href="<%= movie.id %>/edit"><button type="submit">Edit <%= movie.title %></button></a>
+
 	<a href="/movies"><button type="submit">Back to index page</button></a>
 
 </body>
