--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Movie Watch List</title>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+
 </head>
 <body>
 
