--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Add New Movie</title>
+	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+
 </head>
 <body>
 
