styled the index and show ejs pages quite a bit and routed the new ejs page to be built out

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,58 @@
-* {
+/** {
 	border: 1px solid black;
-	margin: 0 auto;
+}*/
+
+/* index styling */
+#index-header {
 	text-align: center;
+	font-family: 'Pacifico', cursive;
+	font-size: 50px;
 }
-
-
 #index-container {
-	width: 1000px;
+	font-family: 'Arbutus Slab', serif;
+	width: 900px;
 	display: flex;
 	justify-content: space-around;
 	flex-wrap: wrap;
 	padding: 20px;
+	margin: 0 auto;
+	text-align: center;
 }
 #coffee-container {
 	margin: 10px 0 10px 0;
+}
+
+/* show styling */
+#show-container {
+	height: 200px;
+	width: 750px;
+	display: flex;
+	justify-content: flex-start;
+	font-family: 'Arbutus Slab', serif;
+	background-image: url('../img/subtlebg.jpg')
+}
+/*#img-container {
+	border-right: 1px solid black;
+}*/
+#info-container {
+	display: flex;
+	justify-content: space-around;
+	flex-direction: column;
+	width: 600px;
+	background-color: rgba(255, 255, 255, 0.5)
+}
+.info-box {
+	margin-left: 10px;
+}
+#name-and-caffeine {
+	display: flex;
+	justify-content: flex-start;
+}
+#name {
+	font-size: 64px;
+	align-self: flex-end;
+}
+#caffeine {
+	position: relative;
+	top: 45px;
 }
