--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,10 +4,11 @@
 	<meta charset="utf-8">
 	<title>Coffee Index</title>
 	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Pacifico" rel="stylesheet">
 </head>
 <body>
 
-<h1>coffee is good for to be of drinking</h1>
+<h1 id="index-header">Types of Coffee I Have Collected</h1>
 
 <div id="index-container">
 
