index route communicating with db

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,8 +10,8 @@
   <form action="/cars" method="POST">
     Make:<input type="text" name="make"><br>
     Model:<input type="text" name="model"><br>
-    Year:<input type="date" name="make"><br>
-    Color:<input type="text" name="make"><br>
+    Year:<input type="date" name="year"><br>
+    Color:<input type="text" name="color"><br>
     <input type="submit" name="Create car"><br>
   </form>
 
