--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
   <nav>
-    <a href="localhost:/cars/new">Create a new car</a>
+    <a href="cars/new">Create a new car</a>
   </nav>
 
   <h1>Here is a list of all avliable cars</h1>
