edit route set up and redirecting, delete button set up and redirecting.

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -34,7 +34,10 @@
 </div>
 
 <nav>
-	<a href="/coffee">return</a> | edit | delete
+	<a href="/coffee">return</a> | <a href="/coffee/<%= coffee.id %>/edit">edit</a>  
+	<form action="/coffee/<%= coffee.id %>?_method=DELETE" method="POST"> 
+		<input type="submit" value="delete">
+	</form>
 </nav>
 
 
