added css file, trying to link it to pages

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Unicorn Edit Page</title>
-
+    <link type="text/css" href="/css/style.css" rel="stylesheet">
 </head>
 <body>
 
