--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Unicorn Index Page</title>
-
+    <link type="text/css" rel="stylesheet" href="/public/css/style.css" >
 </head>
 <body>
 <h1>Unicorn Index Page</h1>
