--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Add a Unicorn</title>
-    <link type="text/css" href="#" rel="stylesheet">
+    <link type="text/css" href="/css/style.css" rel="stylesheet">
 </head>
 <body>
 <h1>🌈 🌟 New Unicorn Page 🦄 🍬</h1>
