--- a/views/show.ejs
+++ b/views/show.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title><%= unicorn.name %> page</title>
-
+    <link type="text/css" href="/css/style.css" rel="stylesheet">
 </head>
 <body>
 <h1>Unicorn Show Page</h1>
