--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,8 +1,15 @@
 <html>
 <head>
-	<title></title>
+	<title>Add a movie</title>
 </head>
 <body>
-new page
+	<h1>New movie Page</h1>
+	<form action="/movies" method="POST">
+		Name: <input type="text" name="name">
+		Year: <input type="text" name="year">
+		Image: <input type="text" name="img">
+		Genre: <input type="text" name="genre">
+		<input type="submit">
+	</form>
 </body>
 </html>
