show route working and show view created

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
 	<ul>
 		<% for (let i = 0; i < whovians.length; i++) { %>
-			<li><a href=""></a><%= whovians[i].name %></li>
+			<li><a href="whovians/<%=whovians[i].id %>"><%= whovians[i].name %></a></li>
 		<% } %>
 	</ul>
 </body>
