--- a/views/show.ejs
+++ b/views/show.ejs
@@ -6,7 +6,7 @@
 <body>
 	<h1><%=whovian.name %>'s Page</h1>
 
-	<p><%=whovian.name %> is a <%=whovian.species %> and a <%=whovian.type %> of The Doctor. Born on <%=whovian.birthDate %>, <%=whovian.name %> has been on the show for <%=whovian.seasons %> seasons. <%=whovian.name %>'s skill include <%=whovian.skills %>.</p>
+	<p><%=whovian.name %> is a <%=whovian.species %> and a <%=whovian.type %> of The Doctor. Born on <%=whovian.birthDate %>, <%=whovian.name %> has been on the show for <%=whovian.seasons %> seasons. <%=whovian.name %>'s skills include <%=whovian.skills %>.</p>
 
 	<p>Do we like them: 
 		<% if (whovian.friend === true) { %> Yes!
