Added gulp and less, styled the index page

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Edit Movie</title>
+	<link rel="stylesheet" type="text/css" href="/css/edit.css">
 </head>
 <body>
 	<h1>Edit Page</h1>
