show route working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<h1>Index Car Page</h1>
+<h1>Criminal ? Index Page</h1>
 
 	<ul>
 	 <% for (let i=0; i< criminals.length; i++) {%> -->
@@ -12,10 +12,11 @@
 			
 			<a href="/criminals/<%= criminals[i].id%>">
 			<%= criminals[i].name %>
+				
 			</a>
-			's crime
-			is 
-			<%= criminals[i].crime %>
+			
+
+			
 
 			</li>
 		<% } %>
