--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
 			<nav>
 				<a href="whovians/<%=whovians[i].id %>/edit">(Edit)</a>
 			</nav>
+			<form action="/whovians/<%=whovians[i].id %>/?_method=DELETE" method="POST">
+				<button>EXTERMINATE</button>
+			</form>
 		<% } %>
 	</ul>
 </body>
