--- a/views/show.ejs
+++ b/views/show.ejs
@@ -7,15 +7,15 @@
 <body>
 	<h1>Criminal Show page</h1>
 	<nav>
-		<a href="/fruits">index page of Fruits</a>
+		<a href="/criminals">index page of Criminals</a>
 	</nav>
 	<ul>	
 		<li>
 			<%=criminal.name%>		
 			's crime is
 			<%=criminal.crime%>
-			
-			The criminal is 
+			.
+			This criminal is 
 			<%if(!criminal.inPrison){%> not <% }%>
 			in prison.
 		</li>	
