--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,17 +4,20 @@
 	<title></title>
 </head>
 <body>
-<h1>Criminal ? Index Page</h1>
-
+<h1>Criminal Index Page</h1>
+<a href="/criminals/new">create Criminals page</a>
 	<ul>
-	 <% for (let i=0; i< criminals.length; i++) {%> -->
+	 <% for (let i=0; i< criminals.length; i++) {%>
 		<li>
 			
 			<a href="/criminals/<%= criminals[i].id%>">
 			<%= criminals[i].name %>
 				
 			</a>
-			
+	<form action="/criminals/<%= criminals[i].id %>?_method=DELETE" method="POST">
+	<input type="submit" value="DELETE">
+	</form>
+	<a href="/criminals/<%=criminals[i].id %>/edit">Edit</a>
 
 			
 
