--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -8,13 +8,15 @@
 	<h1>Edit criminal page</h1>
 	The Criminal's name is: <%=criminal.name %>
 	<form action="/criminals/<%= criminal.id %>?_method=PUT" method="POST">
-		Name: <input type="text" name="name" value=<% criminal.name%>>
-		Crime: <input type="text" name="crime" value=<% criminal.crime%>>
-		Is in prison: <input type="checkbox" name="inPrison">
-		<br />
+		Name: <input type="text" name="name" value=<%=criminal.name%>>
+		Crime: <input type="text" name="crime" value=<%=criminal.crime%>>
+		Is in prison: <input type="checkbox" name="inPrison"
+		
+
 		<%if (criminal.inPrison === true){%>
 		checked
 		<%}%>
+		>
 		<input type="submit" name="" value="Edit Criminal" /> 
 <a href="/criminals/"></a>
 	</form>
